# polkadot-attendance-nft

./: .gitignore  README.md  config.json  create_account.js  testing-checklist.md  verification-guide.md
admin-ui/src/: App.css  App.js
admin-ui/src/components/: EventCard.js  NFTMintList.js  Navbar.js  PrivateRoute.js  Spinner.js
admin-ui/src/context/: AuthContext.js
admin-ui/src/pages/: Dashboard.js  EventDetail.js  EventForm.js  EventList.js  login.js
admin-ui/src/utils/: api.js  formatters.js
backend/: config.json  docker-compose.yml  go.mod  go.sum  metadata_dump.json  render.yaml
backend/cmd/contract-test/: main.go
backend/cmd/db-test/: main.go
backend/cmd/metadata-dump/: main.go
backend/cmd/server/: main.go
backend/config/: index.js
backend/scripts/: db-setup.sh  start-db.sh  stop-db.sh
backend/src/: index.js
backend/utils/: auth.js  db.js  logger.js
cmd/db-test/: main.go  simple.go
cmd/metadata-dump/: main.go
cmd/metadata_dump/: main.go
contracts/: Cargo.toml  lib.rs
contracts/attendance_nft/: cargo.toml  lib.rs
contracts/src/: lib.rs
docs/: architecture.md  development-guide.md  polkadot-api-reference.md  production-deployment.md  production-requirements.md  project-features.md
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
internal/polkadot/: client.go  contract.go  contract_utils.go
public/: contract-abi.json  verification-guide.md
scripts/: deploy_contract.js  dump_metadata.sh  package.json
src/components/: MockCheckInSimulator.js
(+44 files in other folders)
