[package]
name = "attendance_nft"
version = "0.1.0"
authors = ["Samuel Arogbonlo <sbayo971@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

# These features are needed for e2e testing
[package.metadata.dylint]
libraries = [
    { git = "https://github.com/paritytech/ink", pattern = "ink/linting" }
]

[package.metadata.cargo-contract]
contract-build = []
ink-as-dependency = []

[profile.release]
overflow-checks = false
